--- a/client/src/App.css
+++ b/client/src/App.css
@@ -124,6 +124,30 @@ form button:hover {
   padding: 0 30px;
 }
 
+.play {
+  display: grid;
+  grid-template-columns: repeat(2, 1fr);
+  grid-template-rows: repeat(4, 50px);
+  width: 80%;
+  margin: 20px auto;
+}
+
+.play img {
+  grid-column: 1 / 2;
+  grid-row: 1 / 4;
+  height: 10em;
+  justify-self: center;
+}
+
+.play h2,
+.play p,
+.play h5 {
+  grid-column: 2 / 3;
+  text-align: left;
+  align-self: center;
+  margin: 0px;
+}
+
 .foot {
   padding: 10px;
   width: 100%;
