--- a/client/src/App.css
+++ b/client/src/App.css
@@ -30,8 +30,7 @@ main a {
   color: #0b132bff;
 }
 
-nav a:hover,
-main a:hover {
+nav a:hover{
   border-bottom: 1px solid #0b132bff;
 }
 
@@ -50,7 +49,7 @@ form select,
 form button {
   margin: 5px 0;
   font-family: 'Rubik', sans-serif;
-  width: 25%;
+  width: 30%;
   box-sizing: border-box;
 }
 
@@ -78,12 +77,15 @@ form button {
   font-weight: 600;
   transition: all 0.2s;
   box-sizing: border-box;
+  box-shadow: 5px 5px 8px #1c2541ff;
+  padding: 5px;
 }
 
 form button {
   background-color: #3a506bff;
   color: #ffffff;
   padding: 3px;
+  margin: 20px 0 0 0;
 }
 
 form button:hover {
@@ -99,12 +101,23 @@ form button:hover {
 }
 
 .offense,
-.defense,
-.play-list {
+.defense {
   border: 2px solid #1c2541ff;
   padding: 50px 100px;
   margin: 20px;
   border-radius: 5px;
+}
+
+.offense:hover,
+.defense:hover,
+.play-list:hover {
+  box-shadow: 5px 5px 8px #1c2541ff;
+}
+
+.offense h3,
+.defense h3,
+.play-list h3 {
+  margin: 0;
 }
 
 .offense,
@@ -146,6 +159,13 @@ form button:hover {
   text-align: left;
   align-self: center;
   margin: 0px;
+}
+
+.play-list {
+  border: 2px solid #1c2541ff;
+  padding: 50px;
+  margin: 20px 30%;
+  border-radius: 5px;
 }
 
 .foot {
