--- a/client/src/App.css
+++ b/client/src/App.css
@@ -117,7 +117,9 @@ form button:hover {
 .offense,
 .defense {
   border: 2px solid #1c2541ff;
-  padding: 50px 100px;
+  min-width: 80%;
+  max-width: 90%;
+  padding: 50px;
   margin: 20px;
   border-radius: 5px;
   display: flex;
@@ -189,10 +191,16 @@ form button:hover {
 @media screen and (max-width: 500px) {
   nav h1 {
     font-size: 20px;
+    margin: 30px 0 0 0;
   }
 
-  nav {
-    padding: 30px 20px
+  .right-nav {
+    display: flex;
+    flex-direction: column;
+  }
+
+  .right-nav a {
+    margin: 5px;
   }
   
   .play {
@@ -219,7 +227,7 @@ form button:hover {
 
   .offense,
   .defense {
-    padding: 30px;
+    padding: 20px;
     margin: 15px;
   }
 
