--- a/client/src/App.css
+++ b/client/src/App.css
@@ -237,3 +237,19 @@ form button:hover {
   }
 
 }
+
+@media screen and (max-width: 736px) {
+  nav h1 {
+    font-size: 20px;
+    margin: 30px 0 0 0;
+  }
+
+  .right-nav {
+    display: flex;
+    flex-direction: column;
+  }
+
+  .right-nav a {
+    margin: 5px;
+  }
+}
